Add authentication and cookie parsing middleware to the backend

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,5 @@
 PORT=8000
 NODE_ENV=developement
 DB_URL=mongodb://localhost:27017/e-commerce
+JWT_SECRET=fusionbuy-super-secret-jwt-key-2025
+JWT_EXPIRES_TIME=7d
